--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "scripts": {
     "start": "SET NODE_ENV=prod&node build/index.js",
     "build": "sucrase ./src -d ./build --transforms imports",
-    "dev": "SET NODE_ENV=dev&nodemon --exec sucrase-node src/index.js",
+    "dev": "SET NODE_ENV=dev&nodemon -r sucrase/register src/index.js",
     "format": "prettier --write \"{,!(node_modules)/**/}*.{js,json}\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.6.0",
+    "sequelize": "^6.6.2"
   },
   "devDependencies": {
     "eslint": "^7.27.0",
@@ -24,6 +27,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.0",
+    "sequelize-cli": "^6.2.0",
     "sucrase": "^3.18.1"
   }
 }
